// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remove the same document twice 1`] = `
Object {
  "docs": Map {
    2 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 2,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 100,
      "firstChild": null,
      "firstPosting": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
          ],
          "key": 2,
        },
        "next": null,
        "termFrequency": Array [
          1,
        ],
      },
      "next": Object {
        "charCode": 99,
        "firstChild": null,
        "firstPosting": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
            ],
            "key": 2,
          },
          "next": null,
          "termFrequency": Array [
            1,
          ],
        },
        "next": Object {
          "charCode": 98,
          "firstChild": null,
          "firstPosting": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
              ],
              "key": 2,
            },
            "next": null,
            "termFrequency": Array [
              1,
            ],
          },
          "next": Object {
            "charCode": 97,
            "firstChild": null,
            "firstPosting": null,
            "next": null,
          },
        },
      },
    },
    "firstPosting": null,
    "next": null,
  },
}
`;

exports[`two documents with shared terms 1`] = `
Object {
  "docs": Map {
    2 => Object {
      "fieldLengths": Array [
        3,
      ],
      "key": 2,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 100,
      "firstChild": null,
      "firstPosting": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
          ],
          "key": 2,
        },
        "next": null,
        "termFrequency": Array [
          1,
        ],
      },
      "next": Object {
        "charCode": 99,
        "firstChild": null,
        "firstPosting": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
            ],
            "key": 2,
          },
          "next": null,
          "termFrequency": Array [
            1,
          ],
        },
        "next": Object {
          "charCode": 98,
          "firstChild": null,
          "firstPosting": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
              ],
              "key": 2,
            },
            "next": null,
            "termFrequency": Array [
              1,
            ],
          },
          "next": Object {
            "charCode": 97,
            "firstChild": null,
            "firstPosting": null,
            "next": null,
          },
        },
      },
    },
    "firstPosting": null,
    "next": null,
  },
}
`;

exports[`two documents with undefined fields 1`] = `
Object {
  "docs": Map {
    2 => Object {
      "fieldLengths": Array [
        3,
        0,
      ],
      "key": 2,
    },
  },
  "fields": Array [
    Object {
      "avg": 3,
      "sum": 3,
    },
    Object {
      "avg": 0,
      "sum": 0,
    },
  ],
  "root": Object {
    "charCode": 0,
    "firstChild": Object {
      "charCode": 100,
      "firstChild": null,
      "firstPosting": Object {
        "details": Object {
          "fieldLengths": Array [
            3,
            0,
          ],
          "key": 2,
        },
        "next": null,
        "termFrequency": Array [
          1,
          0,
        ],
      },
      "next": Object {
        "charCode": 99,
        "firstChild": null,
        "firstPosting": Object {
          "details": Object {
            "fieldLengths": Array [
              3,
              0,
            ],
            "key": 2,
          },
          "next": null,
          "termFrequency": Array [
            1,
            0,
          ],
        },
        "next": Object {
          "charCode": 98,
          "firstChild": null,
          "firstPosting": Object {
            "details": Object {
              "fieldLengths": Array [
                3,
                0,
              ],
              "key": 2,
            },
            "next": null,
            "termFrequency": Array [
              1,
              0,
            ],
          },
          "next": Object {
            "charCode": 97,
            "firstChild": null,
            "firstPosting": null,
            "next": null,
          },
        },
      },
    },
    "firstPosting": null,
    "next": null,
  },
}
`;
